      (Alexander Belchenko)

    * ``launchpad`` builtin plugin now shipped as separate part in standalone
      bzr.exe, installed to ``C:\Program Files\Bazaar\plugins`` directory, 
      and standalone installer allows user to skip installation of this plugin.
      (Alexander Belchenko)
 
    * Restore auto-detection of plink.exe on Windows. (Dmitry Vasiliev)

  FEATURES:

   * ``branch`` and ``checkout`` can hard-link working tree files, which is
     faster and saves space.  (Aaron Bentley)

  IMPROVEMENTS:

  BUGFIXES:

    * Disable plink's interactive prompt for password.
      (#107593, Dmitry Vasiliev)

    * Include quick-start-summary.svg file to python-based installer(s)
      for Windows. (#192924, Alexander Belchenko)

    * Make version-info --custom imply --all. (#195560, James Westby)

    * ``merge --preview`` now works for merges that add or modify
      symlinks (James Henstridge)

    * Upgrade bundled ConfigObj to version 4.5.1, which properly quotes #
      signs, among other small improvements. (Matt Nordhoff, #86838)

  API BREAKS:

    * Support for loading plugins from zip files and
      ``bzrlib.plugin.load_from_zip()`` function are deprecated.
      (Alexander Belchenko)

  TESTING:

    * The branch interface tests were invalid for branches using rich-root
      repositories because the empty string is not a valid file-id.
      (Robert Collins)

  INTERNALS:

    * New module ``tools/package_mf.py`` provide custom module finder for
      python packages (improves standard python library's modulefinder.py)
      used by ``setup.py`` script while building standalone bzr.exe.
      (Alexander Belchenko)

    * New remote method ``RemoteBzrDir.find_repositoryV2`` adding support for
      detecting external lookup support on remote repositories. This method is
      now attempted first when lookup up repositories, leading to an extra 
      round trip on older bzr smart servers. (Robert Collins)
 